<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.tonikelope</groupId>
    <artifactId>MegaBasterd</artifactId>
    <version>6.31</version>
    <packaging>jar</packaging>
    <dependencies>
        <dependency>
            <groupId>org.xerial</groupId>
            <artifactId>sqlite-jdbc</artifactId>
            <version>3.25.2</version>
            <type>jar</type>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-core</artifactId>
            <version>2.9.6</version>
            <type>jar</type>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-annotations</artifactId>
            <version>2.9.9</version>
            <type>jar</type>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-collections4</artifactId>
            <version>4.3</version>
        </dependency>
        <dependency>
            <groupId>javax.xml.bind</groupId>
            <artifactId>jaxb-api</artifactId>
            <version>2.2.11</version>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>2.9.9.2</version>
        </dependency>
        <dependency>
          <groupId>javax.xml.bind</groupId>
          <artifactId>jaxb-api</artifactId>
          <version>2.3.0</version>
        </dependency>
    </dependencies>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>
        <project.build.downloads.directory>${project.basedir}/downloads</project.build.downloads.directory>
    </properties>
    <build>
		<plugins>
            <plugin>
                <artifactId>maven-assembly-plugin</artifactId>
                <configuration>
                    <archive>
                        <manifest>
                            <addClasspath>true</addClasspath>
                            <mainClass>com.tonikelope.megabasterd.MainPanel</mainClass>
                        </manifest>
                        <manifestEntries>
                            <SplashScreen-Image>images/dot_com.png</SplashScreen-Image>
                        </manifestEntries>
                    </archive>
                    <descriptorRefs>
                        <descriptorRef>jar-with-dependencies</descriptorRef>
                    </descriptorRefs>
                </configuration>
                <executions>
                    <execution>
                        <id>make-my-jar-with-dependencies</id>
                        <phase>package</phase>
                        <goals>
                            <goal>single</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
    <profiles>
		<profile>
			<id>windows</id>
			<activation>
				<os>
					<family>windows</family>
				</os>
				<activeByDefault>false</activeByDefault>
			</activation>
			<properties>
				<package.windows.platform>windows</package.windows.platform>
				<package.windows.directory>${project.build.directory}/${package.windows.platform}</package.windows.directory>
				<package.windows.jdk.url>https://github.com/AdoptOpenJDK/openjdk8-binaries/releases/download/jdk8u212-b04_openj9-0.14.2/OpenJDK8U-jdk_x64_windows_openj9_8u212b04_openj9-0.14.2.zip</package.windows.jdk.url>
				<package.windows.jdk.md5>c8a4b9868772e52f9b6bf266a3c33a13</package.windows.jdk.md5>
				<package.windows.downloads>${project.build.downloads.directory}/${package.windows.platform}</package.windows.downloads>
				<package.windows.jdk>${package.windows.downloads}/jdk8u212-b04</package.windows.jdk>
			</properties>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-antrun-plugin</artifactId>
						<version>1.7</version>
						<executions>
							<execution>
								<id>windows-cleanup</id>
								<phase>prepare-package</phase>
								<goals>
									<goal>run</goal>
								</goals>
								<configuration>
									<target>
										<echo message="Deleting ${package.windows.platform} package"/>
										<delete dir="${package.windows.directory}"/>
										<mkdir dir="${package.windows.directory}"/>
									</target>
								</configuration>
							</execution>
						</executions>
					</plugin>
					<plugin>
						<groupId>com.googlecode.maven-download-plugin</groupId>
						<artifactId>download-maven-plugin</artifactId>
						<version>1.4.2</version>
						<executions>
							<execution>
								<id>windows-download-jdk</id>
								<phase>prepare-package</phase>
								<goals>
									<goal>wget</goal>
								</goals>
								<configuration>
									<url>${package.windows.jdk.url}</url>
									<md5>${package.windows.jdk.md5}</md5>
									<outputDirectory>${package.windows.downloads}</outputDirectory>
									<unpack>true</unpack>
								</configuration>
							</execution>
						</executions>
					</plugin>
					<plugin>
						<groupId>com.akathist.maven.plugins.launch4j</groupId>
						<artifactId>launch4j-maven-plugin</artifactId>
						<version>1.7.25</version>
						<executions>
							<execution>
								<id>windows-package</id>
								<phase>package</phase>
								<goals>
									<goal>launch4j</goal>
								</goals>
								<configuration>
									<headerType>gui</headerType>
									<jar>${project.build.directory}/${project.name}-${project.version}-jar-with-dependencies.jar</jar>
									<outfile>${package.windows.directory}/${project.name}.exe</outfile>
									<errTitle>${project.name}</errTitle>
									<classPath>
										<mainClass>com.tonikelope.megabasterd.MainPanel</mainClass>
										<addDependencies>false</addDependencies>
										<preCp>anything</preCp>
									</classPath>
									<restartOnCrash>true</restartOnCrash>
									<icon>src/main/resources/windows/application.ico</icon>
									<jre>
										<path>${package.windows.jdk}</path>
										<jdkPreference>jdkOnly</jdkPreference>
										<runtimeBits>64</runtimeBits>
										<opts>
											<opt>-Djava.endorsed.dirs=./endorsed</opt>
										</opts>
									</jre>
									<versionInfo>
										<fileVersion>1.0.0.0</fileVersion>
										<txtFileVersion>1.0.0.0</txtFileVersion>
										<fileDescription>${project.description}</fileDescription>
										<copyright>GNU GENERAL PUBLIC LICENSE Version 3</copyright>
										<productVersion>1.0.0.0</productVersion>
										<txtProductVersion>1.0.0.0</txtProductVersion>
										<productName>${project.name}</productName>
										<internalName>${project.name}</internalName>
										<originalFilename>${project.name}.exe</originalFilename>
									</versionInfo>
								</configuration>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
		<profile>
			<id>macos</id>
			<activation>
				<os>
					<family>mac</family>
				</os>
				<activeByDefault>false</activeByDefault>
			</activation>
			<properties>
				<package.macos.platform>macos</package.macos.platform>
				<package.macos.directory>${project.build.directory}/${package.macos.platform}</package.macos.directory>
				<package.macos.jdk.url>https://github.com/AdoptOpenJDK/openjdk8-binaries/releases/download/jdk8u212-b04_openj9-0.14.2/OpenJDK8U-jdk_x64_mac_openj9_8u212b04_openj9-0.14.2.tar.gz</package.macos.jdk.url>
				<package.macos.jdk.md5>a490a871dc06c99ecd8d42de22cefa63</package.macos.jdk.md5>
				<package.macos.downloads>${project.build.downloads.directory}/${package.macos.platform}/jdk</package.macos.downloads>
				<package.macos.jdk>${package.macos.downloads}/jdk8u212-b04</package.macos.jdk>
			</properties>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-antrun-plugin</artifactId>
						<version>1.7</version>
						<executions>
							<execution>
								<id>macos-cleanup</id>
								<phase>prepare-package</phase>
								<goals>
									<goal>run</goal>
								</goals>
								<configuration>
									<target>
										<echo message="Deleting ${package.macos.platform} package"/>
										<delete dir="${package.macos.directory}"/>
										<mkdir dir="${package.macos.directory}"/>
									</target>
								</configuration>
							</execution>
						</executions>
					</plugin>
					<plugin>
						<groupId>com.googlecode.maven-download-plugin</groupId>
						<artifactId>download-maven-plugin</artifactId>
						<version>1.4.2</version>
						<executions>
							<execution>
								<id>macos-download-jdk</id>
								<phase>prepare-package</phase>
								<goals>
									<goal>wget</goal>
								</goals>
								<configuration>
									<url>${package.macos.jdk.url}</url>
									<md5>${package.macos.jdk.md5}</md5>
									<outputDirectory>${package.macos.downloads}</outputDirectory>
									<unpack>true</unpack>
								</configuration>
							</execution>
						</executions>
					</plugin>
					<plugin>
						<groupId>sh.tak.appbundler</groupId>
						<artifactId>appbundle-maven-plugin</artifactId>
						<version>1.2.0</version>
						<dependencies>
							<dependency>
								<groupId>org.codehaus.plexus</groupId>
								<artifactId>plexus-archiver</artifactId>
								<version>RELEASE</version>
							</dependency>
							<dependency>
								<groupId>org.apache.velocity</groupId>
								<artifactId>velocity-tools</artifactId>
								<version>2.0</version>
							</dependency>
						</dependencies>
						<configuration>
							<mainClass>com.tonikelope.megabasterd.MainPanel</mainClass>
							<bundleName>${project.name}</bundleName>
							<jrePath>${package.macos.jdk}</jrePath>
							<iconFile>src/main/resources/macos/application.icns</iconFile>
							<buildDirectory>${package.macos.directory}</buildDirectory>
						</configuration>
						<executions>
							<execution>
								<id>macos-package</id>
								<phase>package</phase>
								<goals>
									<goal>bundle</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
		<profile>
			<id>linux</id>
			<activation>
				<os>
					<family>unix</family>
				</os>
				<activeByDefault>false</activeByDefault>
			</activation>
			<properties>
				<package.linux.platform>linux</package.linux.platform>
				<package.linux.directory>${project.build.directory}/${package.linux.platform}</package.linux.directory>
				<package.linux.downloads>${project.build.downloads.directory}/${package.linux.platform}</package.linux.downloads>
				<package.linux.jdk.url>https://github.com/AdoptOpenJDK/openjdk8-binaries/releases/download/jdk8u212-b04_openj9-0.14.2/OpenJDK8U-jdk_x64_linux_openj9_linuxXL_8u212b04_openj9-0.14.2.tar.gz</package.linux.jdk.url>
				<package.linux.jdk.md5>2827395387904f253f08ffa13ae0c9a7</package.linux.jdk.md5>
				<package.linux.jdk>${package.linux.downloads}/jdk8u212-b04</package.linux.jdk>
				<package.linux.packr.url>https://libgdx.badlogicgames.com/ci/packr/packr.jar</package.linux.packr.url>
				<package.linux.packr.md5>13c832920ac832c11cb95a0b58c520f9</package.linux.packr.md5>
				<package.linux.packr>${package.linux.downloads}/packr.jar</package.linux.packr>
			</properties>
			<build>
				<plugins>
					<plugin>
						<groupId>com.googlecode.maven-download-plugin</groupId>
						<artifactId>download-maven-plugin</artifactId>
						<version>1.4.2</version>
						<executions>
							<execution>
								<id>linux-download-jdk</id>
								<phase>prepare-package</phase>
								<goals>
									<goal>wget</goal>
								</goals>
								<configuration>
									<url>${package.linux.jdk.url}</url>
									<md5>${package.linux.jdk.md5}</md5>
									<outputDirectory>${package.linux.downloads}</outputDirectory>
									<unpack>false</unpack>
								</configuration>
							</execution>
							<execution>
								<id>linux-download-packr</id>
								<phase>prepare-package</phase>
								<goals>
									<goal>wget</goal>
								</goals>
								<configuration>
									<url>${package.linux.packr.url}</url>
									<md5>${package.linux.packr.md5}</md5>
									<outputDirectory>${package.linux.downloads}</outputDirectory>
									<unpack>false</unpack>
								</configuration>
							</execution>
						</executions>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-antrun-plugin</artifactId>
						<version>1.7</version>
						<executions>
							<execution>
								<id>linux-unpack-jdk</id>
								<phase>prepare-package</phase>
								<goals>
									<goal>run</goal>
								</goals>
								<configuration>
									<target>
										<untar src="${package.linux.downloads}/OpenJDK8U-jdk_x64_linux_openj9_linuxXL_8u212b04_openj9-0.14.2.tar.gz" compression="gzip" dest="${package.linux.downloads}"/>.
									</target>
								</configuration>
							</execution>
							<execution>
								<id>linux-cleanup</id>
								<phase>prepare-package</phase>
								<goals>
									<goal>run</goal>
								</goals>
								<configuration>
									<target>
										<echo message="Deleting ${package.linux.platform} package"/>
										<delete dir="${package.linux.directory}"/>
										<mkdir dir="${package.linux.directory}"/>
									</target>
								</configuration>
							</execution>
						</executions>
					</plugin>
					<plugin>
						<groupId>org.codehaus.mojo</groupId>
						<artifactId>exec-maven-plugin</artifactId>
						<version>1.6.0</version>
						<executions>
						  <execution>
							<id>linux-package</id>
							<phase>package</phase>
							<goals>
							  <goal>exec</goal>
							</goals>
						  </execution>
						</executions>
						<configuration>
							<executable>java</executable>
							<arguments>
								<argument>-jar</argument>
								<argument>${package.linux.packr}</argument>
								<argument>--platform</argument>
								<argument>linux64</argument>
								<argument>--jdk</argument>
								<argument>${package.linux.jdk}</argument>
								<argument>--executable</argument>
								<argument>${project.name}</argument>
								<argument>--classpath</argument>
								<argument>${project.build.directory}/${project.name}-${project.version}-jar-with-dependencies.jar</argument>
								<argument>--mainclass</argument>
								<argument>com.tonikelope.megabasterd.MainPanel</argument>
								<argument>--vmargs</argument>
								<argument>Xmx1G</argument>
								<argument>--resources</argument>
								<argument>src/main/resources</argument>
								<argument>--output</argument>
								<argument>${package.linux.directory}</argument>
								<argument>--removelibs</argument>
								<argument>--verbose</argument>
						  </arguments>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
    </profiles>
    <name>MegaBasterd</name>
    <description>Yet another unofficial (and ugly) cross-platform MEGA downloader/uploader/streaming suite.</description>
</project>
